fixing hover colour for navbar items for better visibility (#814)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -400,6 +400,7 @@ textarea {
   --ifm-menu-color-active: #2eb9dc;
   --ifm-footer-background-color: #000;
   --ifm-background-color: #121212;
+  --ifm-navbar-link-hover-color: #6119ef;
   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
   --search-local-hit-active-color: #000;
   --banner-background: #1d1d1d;
@@ -442,6 +443,7 @@ textarea {
   --ifm-footer-background-color: #000;
   --ifm-footer-link-hover-color: #c0c0c0;
   --ifm-background-color: #fff;
+  --ifm-navbar-link-hover-color: #6119ef;
   --banner-background: #fff;
   --banner-text: #121212;
   --banner-text-shadow: #fff;
